<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_activity_background"
    tools:context=".Activities.RegisterActivity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="279dp"
        android:layout_height="51dp"
        android:layout_marginTop="48dp"
        android:background="@android:color/transparent"
        android:gravity="center_horizontal"
        android:text="@string/CreateAccount"
        android:textColor="@color/colorLight"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:layout_margin="5dp"
            android:backgroundTint="@color/colorLight"
            android:fontFamily="monospace"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColor="@color/colorLight"
            android:textColorHint="@color/colorLight"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:layout_margin="5dp"
            android:backgroundTint="@color/colorLight"
            android:fontFamily="monospace"
            android:hint="@string/username"
            android:inputType="textPersonName"
            android:textColor="@color/colorLight"
            android:textColorHint="@color/colorLight"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/et_password1"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:layout_margin="5dp"
            android:layout_marginTop="19dp"
            android:layout_marginEnd="10dp"
            android:backgroundTint="@color/colorLight"
            android:fontFamily="monospace"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@color/colorLight"
            android:textColorHint="@color/colorLight"
            android:textSize="18sp" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_signUp"
        android:layout_width="121dp"
        android:layout_height="52dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/main_rounded_buttons"
        android:shadowColor="@color/colorPrimary"
        android:text="@string/Signup"
        android:textColor="@color/colorLight"
        android:textSize="22dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>