<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/rounded_box"
    android:gravity="center"
    android:orientation="vertical"
    app:cardBackgroundColor="#232925"
    android:layout_margin="12dp"
    app:cardCornerRadius="12dp"
    android:elevation="12dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="410dp"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_product_add_product"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:gravity="center"
            android:text="FUNUN Product"
            android:textColor="@color/colorLight"
            android:textSize="25sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_alert_product_title"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight=".1"
                android:gravity="center_vertical"
                android:paddingLeft="5dp"
                android:text="@string/ProductName"
                android:textColor="@color/colorLight"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_alert_product_title"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight=".2"
                android:hint="@string/enterproduct"
                android:inputType="textPersonName"
                android:textColor="@color/colorLight"
                android:backgroundTint="@color/colorLight"
                android:textColorHint="@color/colorLight"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_alert_product_price"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight=".1"
                android:gravity="center"
                android:paddingStart="5dp"
                android:text="@string/Price"
                android:textColor="@color/colorLight"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_alert_product_price"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight=".2"
                android:fontFamily="monospace"
                android:hint="@string/enterprice"
                android:inputType="numberDecimal|numberSigned"
                android:backgroundTint="@color/colorLight"
                android:textColor="@color/colorLight"
                android:textColorHint="@color/colorLight"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_alert_product_units"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight=".1"
                android:gravity="center"
                android:paddingStart="5dp"
                android:text="@string/Units"
                android:textColor="@color/colorLight"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_product_units"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight=".2"
                android:hint="@string/enteramount"
                android:backgroundTint="@color/colorLight"
                android:inputType="number|numberDecimal"
                android:textColor="@color/colorLight"
                android:textColorHint="@color/colorLight"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:orientation="horizontal"
            android:padding="5dp">

            <Button
                android:id="@+id/btn_add_product_save"
                android:layout_width="25dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="10dp"
                android:layout_weight=".1"
                android:background="@color/colorGreen"
                android:gravity="center"
                android:text="@string/Save"
                android:textColor="@color/colorLight"
                android:textColorHint="@color/colorLight"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_add_product_cancel"
                android:layout_width="25dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="10dp"
                android:layout_weight=".1"
                android:background="@color/colorGreen"
                android:gravity="center"
                android:text="@string/Cancel"
                android:textColor="@color/colorLight"
                android:textColorHint="@color/colorLight"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>


</androidx.cardview.widget.CardView>