<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_activity_background"
    tools:context=".Activities.MainActivity">

    <EditText
        android:id="@+id/et_mail"
        android:layout_width="209dp"
        android:layout_height="38dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="10dp"
        android:autofillHints=""
        android:backgroundTint="@color/colorLight"
        android:hint="@string/Email"
        android:inputType="textEmailAddress"
        android:textColor="@color/colorLight"
        android:textColorHint="@color/colorLight"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="209dp"
        android:layout_height="38dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:autofillHints=""
        android:backgroundTint="@color/colorLight"
        android:hint="@string/Password"
        android:inputType="textPassword"
        android:textColor="@color/colorLight"
        android:textColorHint="@color/colorLight"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_mail" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="115dp"
        android:layout_height="50dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/main_rounded_buttons"
        android:text="@string/Login"
        android:textColor="@color/colorLight"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/iv_facebook"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_password" />

    <Button
        android:id="@+id/btn_sign"
        android:layout_width="115dp"
        android:layout_height="50dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/main_rounded_buttons"
        android:text="@string/Signup"
        android:textColor="@color/colorLight"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/iv_facebook"
        app:layout_constraintTop_toBottomOf="@+id/et_password" />

    <ImageView
        android:id="@+id/iv_facebook"
        android:layout_width="69dp"
        android:layout_height="50dp"
        android:layout_marginTop="36dp"
        app:layout_constraintEnd_toStartOf="@id/btn_sign"
        app:layout_constraintStart_toEndOf="@id/btn_login"
        app:layout_constraintTop_toBottomOf="@+id/et_password"
        app:srcCompat="@drawable/facebooklogo" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="375dp"
        android:layout_height="97dp"
        android:layout_marginTop="44dp"
        android:background="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/fununlogo" />

    <TextView
        android:id="@+id/tv_recover"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/forgotPass"
        android:textColor="@color/colorLight"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_facebook" />

</androidx.constraintlayout.widget.ConstraintLayout>