<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="15dp"
        android:elevation="15dp"
        android:orientation="vertical"
        android:padding="5dp"
        app:cardBackgroundColor="@color/cardview_dark_background"
        app:cardCornerRadius="20dp">

    <LinearLayout
        android:layout_width="320dp"
        android:layout_height="360dp"
        android:orientation="vertical"
        android:padding="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_margin="5dp"
                android:layout_weight=".1"

                android:gravity="center_vertical|center"
                android:text="FUNUN Note"
                android:textColor="@color/colorLight"
                android:textColorHint="@color/colorLight"
                android:textSize="20dp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:id="@+id/tv_note_title"
                android:layout_width="147dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_weight=".1"

                android:gravity="center_vertical"
                android:text="Note Title:"
                android:textColor="@color/colorLight"
                android:textColorHint="@color/colorLight"
                android:textSize="15dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_note_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_weight=".3"
                android:backgroundTint="@color/colorLight"

                android:gravity="center"
                android:hint="title...."
                android:textColor="@color/colorLight"
                android:textColorHint="@color/colorLight"
                android:textSize="15dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:layout_margin="5dp"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:id="@+id/tv_note_description"
                android:layout_width="172dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="5dp"
                android:layout_weight=".1"

                android:text="Description:"
                android:textColor="@color/colorLight"
                android:textColorHint="@color/colorLight"
                android:textSize="15dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_note_description"
                android:layout_width="match_parent"
                android:layout_height="72dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="8dp"
                android:layout_weight=".2"
                android:backgroundTint="@color/colorLight"

                android:gravity="center"
                android:hint="@string/description"
                android:inputType="textMultiLine|textPersonName"
                android:textColor="@color/colorLight"
                android:textColorHint="@color/colorLight"
                android:textSize="15dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_margin="5dp"
            android:orientation="horizontal"
            android:padding="10dp">

            <Button
                android:id="@+id/btn_add_note_save"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center_vertical"
                android:layout_margin="5dp"
                android:layout_weight=".1"
                android:background="@color/colorGreen"

                android:gravity="center"
                android:text="@string/Save"
                android:textColor="@color/colorLight"
                android:textColorHint="@color/colorLight"
                android:textSize="16dp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_add_note_cancel"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center_vertical"
                android:layout_margin="5dp"
                android:layout_weight=".1"
                android:background="@color/colorGreen"

                android:gravity="center"
                android:text="@string/Cancel"
                android:textColor="@color/colorLight"
                android:textColorHint="@color/colorLight"
                android:textSize="16dp"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>